--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
+    flex-direction: column;
     flex: auto;
     height: 600px;
-    width: 1000px;
+    width: 400px;
     border: solid gray;
 }
