--- a/style.css
+++ b/style.css
@@ -6,3 +6,25 @@
     width: 400px;
     border: solid gray;
 }
+
+.keypad {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.display{
+    width: 100%;
+    height: 30%;
+    background-color: black;
+}
+.keypad-row{
+    display: flex;
+    flex: auto;
+    width: 100%;
+    height: 50%;
+}
+
+button {
+    width: 100%;
+    height: auto;
+}
