--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
-.container {
+* {
+    box-sizing: border-box;
+}
+.container, .keypad, .display, .keypad-row {
     display: flex;
+}
+
+.container {
     flex-direction: column;
     flex: auto;
     height: 600px;
@@ -8,23 +14,49 @@
 }
 
 .keypad {
+    gap: 1em;
+    flex-grow: 2;
+    padding: 1em;
+    align-items: center;
+    background-color: black;
     height: auto;
-    display: flex;
     flex-direction: column;
 }
+
+.keypad-row{
+    gap: .75em;
+    flex: auto;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+}
+
 .display{
+    justify-content: flex-end;
+    align-items: flex-end;
     width: 100%;
     height: 30%;
     background-color: black;
-}
-.keypad-row{
-    display: flex;
-    flex: auto;
-    width: 100%;
-    height: 50%;
+    font: 50px Arial; 
+    padding-right: .5em;
 }
 
+
 button {
-    width: 100%;
-    height: auto;
+    width: 4em;
+    border: none;
+    flex-grow: 0;
+    font: bold 20px Arial;
+    color: white;
+    background: gray;
+    border-radius: 1em;
 }
+
+button.numeric[value="0"] {
+    flex-grow: 4;
+}
+
+button.operator {
+
+}
+
