Adjust color choices for button categories
Set row 1 and last column to unique colors

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ button.numeric[value="0"] {
 }
 
 button.operator {
-
+    background-color: lightcoral;
 }
 
+button.percent, button.sign, button.status {
+    background-color: lightgrey;
+    color: black;
+}
