--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
 .display{
     justify-content: flex-end;
     align-items: flex-end;
+    overflow: hidden;
     width: 100%;
     height: 30%;
     background-color: black;
